// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CFormText customize 1`] = `
<div>
  <h3
    class="form-text bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CFormText component 1`] = `
<div>
  <div
    class="form-text"
  >
    Test
  </div>
</div>
`;
